target_sources(NKHook5 PRIVATE 
    "PatchManager.cpp"
    "IPatch.cpp"
)

add_subdirectory(CApplyStatusEffectTask)
add_subdirectory(CBaseFileIO)
add_subdirectory(CBasePositionableObject)
add_subdirectory(CBloon)
add_subdirectory(CBloonsTD5Game)
add_subdirectory(CCollectableTask)
add_subdirectory(CFlagStringConvertor)
add_subdirectory(CGameScreen)
add_subdirectory(CLoc)
add_subdirectory(CPlayerProfileV1)
add_subdirectory(CProjectile)
add_subdirectory(CSettingsScreen)
add_subdirectory(CTowerFactory)
add_subdirectory(CWeapon)
add_subdirectory(CWeaponFactory)
add_subdirectory(CZipFile)
add_subdirectory(GLRenderLayer)
add_subdirectory(OpenGL)
add_subdirectory(Screens)
add_subdirectory(Unknown)